# BaseballBattingOrder

./: README.md
app/: app.py  main.py  pyproject.toml
app/data/: lotte_2024.csv
app/lib/: _set_page_config.py  display.py  game_simulator.py  get_data.py  one_game.py  routing.py
app/pages/: display.py  game_simulator.py  game_simulator_test.py  get_data.py  one_game.py  select_players.py  simulation.py
