[tool.poetry]
name = "env-bb"
version = "0.1.0"
description = ""
authors = ["Kakeru-O <soarpushcut@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.2"
pandas = "^2.2.3"
streamlit = "^1.41.1"
plotly = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
